# flow_wm

./: .gitignore  README.md  RUNS.md  droid_drrobot_any4d_pipeline.py  env.yaml  extract_any4d_flow.py  prepare_data_wan.py  pyproject.toml  requirements-droid-drrobot-any4d.txt  run_droid_scenes.py  share_wanarch.py
configs/: accelerate_fsdp.yaml  drrobot_models.json  train.example.json  train_drrobot.json  train_drrobot_1k_10vids.json  train_drrobot_1k_10vids_action_aware_fsdp.json  train_drrobot_1k_10vids_egowm.json  train_drrobot_1k_10vids_egowm_fsdp.json  train_drrobot_1k_10vids_embodiment.json  train_drrobot_1k_10vids_v2_fsdp.json  train_drrobot_1k_10vids_v3_eval_smoke.json  train_drrobot_1k_10vids_v3_fsdp.json  train_drrobot_1k_aa_4xa6000.json  train_drrobot_1k_legacy_8xl40.json  train_drrobot_1k_legacy_8xl40_action_aware.json  train_drrobot_1k_legacy_8xl40_action_aware_v2.json  train_drrobot_1k_legacy_8xl40_action_aware_v3.json  train_drrobot_1k_legacy_8xl40_egowm.json  train_drrobot_1k_legacy_8xl40_egowm_640.json  train_drrobot_1k_smoke.json  train_drrobot_1k_v4_full_17f.json  train_drrobot_1k_v4_smoke.json  train_drrobot_action_aware_bypass_20vids.json  train_drrobot_fsdp.json  train_drrobot_full_dit.json  train_drrobot_single_gpu.json  train_drrobot_tracks.json  train_full_dit_8gpu.json  train_smoke_multinode.json  train_vanilla_i2v_fsdp.json
drrobot/: .gitignore  README.md  fetch_droid_intrinsics.py  generate_robot_data.py  gradio_app_realtime.py  render_droid_scenes.py
scripts/: README_download_droid_5k.md  _eval_common.py  audit_v2_init.py  viz_tracks.py  (+34 more)
(+26 files in other folders)
